json func plus gitignore cleanup

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -283,46 +283,50 @@ m4trace:configure.in:61: -1- AH_OUTPUT([HAVE_LINUX_UCDROM_H], [/* Define to 1 if
 @%:@undef HAVE_LINUX_UCDROM_H])
 m4trace:configure.in:61: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LINUX_UCDROM_H])
 m4trace:configure.in:61: -1- m4_pattern_allow([^HAVE_LINUX_UCDROM_H$])
-m4trace:configure.in:63: -1- AC_SUBST([SET_MAKE])
-m4trace:configure.in:63: -1- AC_SUBST_TRACE([SET_MAKE])
-m4trace:configure.in:63: -1- m4_pattern_allow([^SET_MAKE$])
-m4trace:configure.in:64: -1- AC_DEFINE_TRACE_LITERAL([const])
-m4trace:configure.in:64: -1- m4_pattern_allow([^const$])
-m4trace:configure.in:64: -1- AH_OUTPUT([const], [/* Define to empty if `const\' does not conform to ANSI C. */
+m4trace:configure.in:63: -1- AH_OUTPUT([HAVE_LIBJSON_C], [/* Define to 1 if you have the `json-c\' library (-ljson-c). */
+@%:@undef HAVE_LIBJSON_C])
+m4trace:configure.in:63: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBJSON_C])
+m4trace:configure.in:63: -1- m4_pattern_allow([^HAVE_LIBJSON_C$])
+m4trace:configure.in:65: -1- AC_SUBST([SET_MAKE])
+m4trace:configure.in:65: -1- AC_SUBST_TRACE([SET_MAKE])
+m4trace:configure.in:65: -1- m4_pattern_allow([^SET_MAKE$])
+m4trace:configure.in:66: -1- AC_DEFINE_TRACE_LITERAL([const])
+m4trace:configure.in:66: -1- m4_pattern_allow([^const$])
+m4trace:configure.in:66: -1- AH_OUTPUT([const], [/* Define to empty if `const\' does not conform to ANSI C. */
 @%:@undef const])
-m4trace:configure.in:66: -1- AC_SUBST([SBPCD_H])
-m4trace:configure.in:66: -1- AC_SUBST_TRACE([SBPCD_H])
-m4trace:configure.in:66: -1- m4_pattern_allow([^SBPCD_H$])
-m4trace:configure.in:67: -1- AC_SUBST([UCDROM_H])
-m4trace:configure.in:67: -1- AC_SUBST_TRACE([UCDROM_H])
-m4trace:configure.in:67: -1- m4_pattern_allow([^UCDROM_H$])
-m4trace:configure.in:68: -1- AC_SUBST([TYPESIZES])
-m4trace:configure.in:68: -1- AC_SUBST_TRACE([TYPESIZES])
-m4trace:configure.in:68: -1- m4_pattern_allow([^TYPESIZES$])
-m4trace:configure.in:69: -1- AC_SUBST([OPT])
-m4trace:configure.in:69: -1- AC_SUBST_TRACE([OPT])
-m4trace:configure.in:69: -1- m4_pattern_allow([^OPT$])
-m4trace:configure.in:70: -1- AC_SUBST([DEBUG])
-m4trace:configure.in:70: -1- AC_SUBST_TRACE([DEBUG])
-m4trace:configure.in:70: -1- m4_pattern_allow([^DEBUG$])
-m4trace:configure.in:71: -1- AC_SUBST([CC])
-m4trace:configure.in:71: -1- AC_SUBST_TRACE([CC])
-m4trace:configure.in:71: -1- m4_pattern_allow([^CC$])
-m4trace:configure.in:73: -1- AC_CONFIG_FILES([Makefile interface/Makefile paranoia/Makefile cdparanoia-3.pc])
-m4trace:configure.in:73: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.in:68: -1- AC_SUBST([SBPCD_H])
+m4trace:configure.in:68: -1- AC_SUBST_TRACE([SBPCD_H])
+m4trace:configure.in:68: -1- m4_pattern_allow([^SBPCD_H$])
+m4trace:configure.in:69: -1- AC_SUBST([UCDROM_H])
+m4trace:configure.in:69: -1- AC_SUBST_TRACE([UCDROM_H])
+m4trace:configure.in:69: -1- m4_pattern_allow([^UCDROM_H$])
+m4trace:configure.in:70: -1- AC_SUBST([TYPESIZES])
+m4trace:configure.in:70: -1- AC_SUBST_TRACE([TYPESIZES])
+m4trace:configure.in:70: -1- m4_pattern_allow([^TYPESIZES$])
+m4trace:configure.in:71: -1- AC_SUBST([OPT])
+m4trace:configure.in:71: -1- AC_SUBST_TRACE([OPT])
+m4trace:configure.in:71: -1- m4_pattern_allow([^OPT$])
+m4trace:configure.in:72: -1- AC_SUBST([DEBUG])
+m4trace:configure.in:72: -1- AC_SUBST_TRACE([DEBUG])
+m4trace:configure.in:72: -1- m4_pattern_allow([^DEBUG$])
+m4trace:configure.in:73: -1- AC_SUBST([CC])
+m4trace:configure.in:73: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.in:73: -1- m4_pattern_allow([^CC$])
+m4trace:configure.in:75: -1- AC_CONFIG_FILES([Makefile interface/Makefile paranoia/Makefile cdparanoia-3.pc])
+m4trace:configure.in:75: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.in:73: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.in:73: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.in:73: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.in:73: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.in:73: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.in:75: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.in:75: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.in:75: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.in:75: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.in:75: -1- AC_SUBST_TRACE([abs_top_builddir])
